--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@react-navigation/native": "^7.1.16",
     "@react-navigation/native-stack": "^7.3.23",
     "@reduxjs/toolkit": "^2.8.2",
+    "add": "^2.0.6",
     "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
