--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-barcode-builder": "^2.0.0",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
+    "react-native-svg": "^15.12.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "yarn": "^1.22.22"
